@@ -22,30 +22,35 @@
   </lang>
   <autodetect>
     <parallel>
-      <commandset>(see notes)</commandset>
-      <description>(see notes)</description>
-      <manufacturer>(see notes)</manufacturer>
-      <model>(see notes)</model>
     </parallel>
   </autodetect>
   <functionality>A</functionality>
   <driver>Postscript</driver>
-  <unverified/><!--no "contrib_url"-->
+  <!--no "contrib_url"-->
   <comments>
-    <en>I used the original PPD (supposedly just written to support MacOS and MS Win printing) with CUPS,
-which used its LPD backend to send the PostScript to the printer. In this way all
-options can be used: select 1 of 6 trays; choose A4, Letter, A3 etc.; use cover,
-chapter and insert sheets; duplex printing; impose
-as a booklet; inline finishing with stapling or (in the case of a booklet) folding, saddle-stitching,
-edge trimming to a finished A4 or A5 booklet.
+    <en>
 
-This is a professional 110 ppm printer for large commercial print shops, originally developed by
-Kodak; also marketed by DANKA (http://www.danka.de or http://www.danka.com) internationally, who
-might have even more experience with service and maintenance of this device than Heidelberg who
-bought its manufacturing and further development off Kodak. This more than 1 million prints per
-month capable monster prints TIFF, PDF 1.2, PostScript 3, PCL 5; it runs on the output of an
-Adobe RIP powered by a SUN UltraSparc 60.
+    I used the original PPD (supposedly just written to support MacOS
+    and MS Win printing) with CUPS, which used its LPD backend to send
+    the PostScript to the printer. In this way all options can be
+    used: select 1 of 6 trays; choose A4, Letter, A3 etc.; use cover,
+    chapter and insert sheets; duplex printing; impose as a booklet;
+    inline finishing with stapling or (in the case of a booklet)
+    folding, saddle-stitching, edge trimming to a finished A4 or A5
+    booklet.&lt;p&gt;
 
-(tested by Kurt Pfeifle)</en>
+    This is a professional 110 ppm printer for large commercial print
+    shops, originally developed by Kodak; also marketed by DANKA
+    (http://www.danka.de or http://www.danka.com) internationally, who
+    might have even more experience with service and maintenance of
+    this device than Heidelberg who bought its manufacturing and
+    further development off Kodak. This more than 1 million prints per
+    month capable monster prints TIFF, PDF 1.2, PostScript 3, PCL 5;
+    it runs on the output of an Adobe RIP powered by a SUN UltraSparc
+    60.&lt;p&gt;
+
+    (tested by Kurt Pfeifle)&lt;p&gt;
+
+    </en>
   </comments>
 </printer>
