@@ -25,30 +25,36 @@
   </lang>
   <autodetect>
     <parallel>
-      <commandset>(see notes)</commandset>
-      <description>(see notes)</description>
-      <manufacturer>(see notes)</manufacturer>
-      <model>(see notes)</model>
     </parallel>
   </autodetect>
   <functionality>A</functionality>
   <driver>pxlmono</driver>
-  <unverified/><!--no "contrib_url"-->
+  <!--no "contrib_url"-->
   <comments>
-    <en>I used the original PPD with CUPS (supposedly just written to support MacOS and MS Win printing). All
-options can be used: select 1 of 5 trays; choose A4, Letter, A3 etc.; duplex printing; safe toner (draft
-printing); switch back to 400 dpi;inline finishing
-with stapling and punching (if you&apos;ve got the Finisher 3000 installed).
+    <en>
 
-The standard equipment is with PDL support of PCL 5e and PCL 6; you can have PostScript 3 as an option - this
-is what I had at my disposal and what I only used.
+    I used the original PPD with CUPS (supposedly just written to
+    support MacOS and MS Win printing). All options can be used:
+    select 1 of 5 trays; choose A4, Letter, A3 etc.; duplex printing;
+    safe toner (draft printing); switch back to 400 dpi;inline
+    finishing with stapling and punching (if you&apos;ve got the
+    Finisher 3000 installed).&lt;p&gt;
 
-It is doing 65 A4 ppm and is good for 20.000 to 120.000 prints per month. This machine is often to be found
-in semi-professional environments, large offices etc. with the named printing volume.
+    The standard equipment is with PDL support of PCL 5e and PCL 6;
+    you can have PostScript 3 as an option - this
+ is what I had at
+    my disposal and what I only used.&lt;p&gt;
 
-It is an OEM product based on a nearly identical Ricoh device (the Ricoh name of which I&apos;ll have to
-find out first).
+    It is doing 65 A4 ppm and is good for 20.000 to 120.000 prints per
+    month. This machine is often to be found in semi-professional
+    environments, large offices etc. with the named printing
+    volume.&lt;p&gt;
 
-(tested by Kurt Pfeifle)</en>
+    It is an OEM product based on a nearly identical Ricoh device (the
+    Ricoh name of which I&apos;ll have to find out first).&lt;p&gt;
+
+    (tested by Kurt Pfeifle)&lt;p&gt;
+
+    </en>
   </comments>
 </printer>
