@@ -25,40 +25,49 @@
   </lang>
   <autodetect>
     <parallel>
-      <commandset>(see notes)</commandset>
-      <description>(see notes)</description>
-      <manufacturer>(see notes)</manufacturer>
-      <model>(see notes)</model>
     </parallel>
   </autodetect>
   <functionality>A</functionality>
   <driver>Postscript</driver>
-  <unverified/><!--no "contrib_url"-->
+  <!--no "contrib_url"-->
   <comments>
-    <en>I used the original PPD (supposedly just written to support MacOS and MS Win printing) with CUPS, which
-can use LPD as a backend to send the print data out. All
-options can be used: select 1 of 5 trays; choose A4, Letter, A3, A3 FullBleed etc.; duplex printing;
-print on forms; 1-up, 2-up,...16-up; use watermarks; RipNHold; 2 output destinations with face up or
-down each etc.
+    <en>
 
-The device at the moment is run by a (MS Windows NT Server based) Harlequin RIP which is upgraded by
-the MicroPress software; after you&apos;ve sent the job to the (NT-) RIP (which sends the binary TIFF-like
-data to the output device), the RIP can keep your RIPped data in the form of bitmapped pages for
-further manipulation: preview, delete
-pages; insert pages from a different job; merge jobs; rearrange the order of pages; use different
-imposition schemes; delete areas on pages or move, invert, scale or rotate them; paginate the pages etc.
+    I used the original PPD (supposedly just written to support MacOS
+    and MS Win printing) with CUPS, which can use LPD as a backend to
+    send the print data out. All options can be used: select 1 of 5
+    trays; choose A4, Letter, A3, A3 FullBleed etc.; duplex printing;
+    print on forms; 1-up, 2-up,...16-up; use watermarks; RipNHold; 2
+    output destinations with face up or down each etc.&lt;p&gt;
 
-After the manipulations there is no need of re-RIPping; the printers start printing immediately putting
-out paper. The system
-is used for purposes like &quot;print on Demand&quot; (PoD), personalised printing, print variable data, 1:1 marketing,
-jobs that often need a re-print with some minor changes in between print runs (when it is much more
-expensive to do the time-consuming process to re-RIP the complete data again and again).
-It is a system for professional digital printing capable of doing up to 400.000 prints per month per unit.
+    The device at the moment is run by a (MS Windows NT Server based)
+    Harlequin RIP which is upgraded by the MicroPress software; after
+    you&apos;ve sent the job to the (NT-) RIP (which sends the binary
+    TIFF-like data to the output device), the RIP can keep your RIPped
+    data in the form of bitmapped pages for further manipulation:
+    preview, delete pages; insert pages from a different job; merge
+    jobs; rearrange the order of pages; use different imposition
+    schemes; delete areas on pages or move, invert, scale or rotate
+    them; paginate the pages etc.&lt;p&gt;
 
-The system is capable of running as a print cluster of up to 12 connected printer units which can share a
-huge job amongst themselves or work on different ones each. (The maximum cluster gives you 840 ppm and a
-monthly volume of 4.8 million prints).
+    After the manipulations there is no need of re-RIPping; the
+    printers start printing immediately putting out paper. The system
+    is used for purposes like &quot;print on Demand&quot; (PoD),
+    personalised printing, print variable data, 1:1 marketing, jobs
+    that often need a re-print with some minor changes in between
+    print runs (when it is much more expensive to do the
+    time-consuming process to re-RIP the complete data again and
+    again).  It is a system for professional digital printing capable
+    of doing up to 400.000 prints per month per unit.&lt;p&gt;
 
-(tested by Kurt Pfeifle)</en>
+    The system is capable of running as a print cluster of up to 12
+    connected printer units which can share a huge job amongst
+    themselves or work on different ones each. (The maximum cluster
+    gives you 840 ppm and a monthly volume of 4.8 million
+    prints).&lt;p&gt;
+
+    (tested by Kurt Pfeifle)&lt;p&gt;
+
+    </en>
   </comments>
 </printer>
