@@ -26,25 +26,29 @@
   </lang>
   <autodetect>
     <parallel>
-      <commandset>(see notes)</commandset>
-      <description>(see notes)</description>
-      <manufacturer>(see notes)</manufacturer>
-      <model>(see notes)</model>
     </parallel>
   </autodetect>
   <functionality>A</functionality>
   <driver>Postscript</driver>
-  <unverified/><!--no "contrib_url"-->
+  <!--no "contrib_url"-->
   <comments>
-    <en>Is not sold for much longer, but will still be used in many professional environments
-for a number of years because of its
-still unique feature combination: 70 ppm; can do 3 different spot colors concurrently
-(on top of default b+w printing);
-duplex capabilities; a finishing device which can fold A3 and A4 paper; thus outputting
-ready-made A4 and A5 booklets complete with a saddle-stitched stapling; run by an Adobe
-PostScript Level 2 RIP which lives in a SUN Sparc workstation.
-I used the original PPD (supposedly just written to support MacOS and MS Win printing)
-with CUPS, which used its LPD backend to send the PostScript to the printer. In this way
-all options of the printer can be used. (tested by Kurt Pfeifle)</en>
+    <en>
+
+    Is not sold for much longer, but will still be used in many
+    professional environments for a number of years because of its
+    still unique feature combination: 70 ppm; can do 3 different spot
+    colors concurrently (on top of default b+w printing); duplex
+    capabilities; a finishing device which can fold A3 and A4 paper;
+    thus outputting ready-made A4 and A5 booklets complete with a
+    saddle-stitched stapling; run by an Adobe PostScript Level 2 RIP
+    which lives in a SUN Sparc workstation.  I used the original PPD
+    (supposedly just written to support MacOS and MS Win printing)
+    with CUPS, which used its LPD backend to send the PostScript to
+    the printer. In this way all options of the printer can be
+    used.&lt;p&gt;
+
+    (tested by Kurt Pfeifle)&lt;p&gt;
+
+    </en>
   </comments>
 </printer>
