@@ -25,19 +25,20 @@
   </lang>
   <autodetect>
     <parallel>
-      <commandset>(see notes)</commandset>
-      <description>(see notes)</description>
-      <manufacturer>(see notes)</manufacturer>
-      <model>(see notes)</model>
     </parallel>
   </autodetect>
   <functionality>A</functionality>
   <driver>Postscript</driver>
-  <unverified/><!--no "contrib_url"-->
+  <!--no "contrib_url"-->
   <comments>
-    <en>See model Heidelberg Digimaster 9110 for more info as this is
-the printers new brand name after Kodak has sold most of its
-printer technology and manufacturing capacities to Heidelberg.
-(Info supplied by Kurt Pfeifle)</en>
+    <en>
+
+    See model Heidelberg Digimaster 9110 for more info as this is the
+    printers new brand name after Kodak has sold most of its printer
+    technology and manufacturing capacities to Heidelberg.&lt;p&gt;
+
+    (Info supplied by Kurt Pfeifle)&lt;p&gt;
+
+    </en>
   </comments>
 </printer>
