@@ -1,3 +1,10 @@
+2003-01-31  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* db/source/printer/287273.xml, db/source/printer/287337.xml,
+	  db/source/printer/287401.xml, db/source/printer/287657.xml,
+	  db/source/printer/287689.xml: Removed the auto-detection entries
+	  "(see notes)" and the "<unverified />" tags.
+
 2003-01-29  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* db/source/printer/Epson-Stylus_C50.xml: Added Epson Stylus C50.
